GNOME Bugzilla – Bug 752656
gdbusconnection: Fix signal subscription documentation
Last modified: 2015-07-21 19:24:23 UTC
The 'flags' argument to g_dbus_connection_signal_subscribe() is used now, so updating documentation to reflect that.
Created attachment 307795 [details] [review] gdbusconnection: Fix signal subscription documentation
Attachment 307795 [details] pushed as be7de8a - gdbusconnection: Fix signal subscription documentation