gdbusconnection: Fix signal subscription documentation

https://bugzilla.gnome.org/show_bug.cgi?id=752656